# newsletter-automation-gpters

./: .env.example  .gitignore  AI_CASE_STUDY.md  DEVLOG.md  README.md  pyproject.toml  run.py  test_agent.py  test_simple_newsletter.py
articles/2026-01-21/: 01_agent_era.md  01_deepseek_revolution.md  02_claude_healthcare.md  02_multi_agent_era.md  03_next_ai_paradigm.md  03_small_models.md  04_study_cafe.md  newsletter.md
articles/2026-01-22/: test_article.md
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  research.py  tone_editor.py  topic_selector.py
src/tools/: __init__.py  content_tools.py  search_tools.py
src/utils/: __init__.py  merge_articles.py
